# wdbib

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  go.mod  main.go
commands/: commands.go
internals/: metadata.go  metadata_test.go
network/: wikidata.go  wikidata_test.go
network/testdata/: Q163335_claim.json  Q163335_snak.json
src/: CMakeLists.txt  _wikicite_props.gdh  _wikicite_props_enum.gdh  _wikicite_types.gdh  _wikicite_types_enum.gdh  errors.h  main.cpp  spec_stateful_parser.cpp  spec_stateful_parser.h  spec_stateful_parser_test.cpp  system.cpp  system.h  system_test.cpp  wdbib_data.cpp  wdbib_data.h  wdbib_data_test.cpp  wikicite.cpp  wikicite.h  wikicite_test.cpp
src/commands/: add.cpp  add.h  convert.cpp  list.cpp  list.h  meta.h  output_helper.h  search.cpp  show.cpp  show.h  sync.cpp  validators.h  version.cpp  version.h  view.cpp
src/fixtures/: Q163335.json  Q163335.json.downloaded  Q163335.json.id  Q163335.json.snak  Q21090025.json.downloaded  citation-round-trip-1  citation-round-trip-2  citation.example
src/network/: wikidata.cpp  wikidata.h  wikidata_test.cpp
src/storage/: data_file.cpp  data_file.h  data_file_test.cpp  spec_stateful_parser.cpp  spec_stateful_parser.h  spec_stateful_parser_test.cpp
storage/: cache.go  citations.go  literals.go  uri.go
testhelper/: testhelper.go
tools/: generate_metadata.py  props.json
